--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "5.2.11",
         "@angular/platform-browser-dynamic": "5.2.11",
         "@ionic-native/core": "~4.18.0",
+        "@ionic-native/qr-scanner": "^4.20.0",
         "@ionic-native/splash-screen": "~4.18.0",
         "@ionic-native/status-bar": "~4.18.0",
         "@ionic/storage": "2.2.0",
@@ -29,6 +30,7 @@
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.1.3",
         "cordova-plugin-ionic-webview": "^2.3.2",
+        "cordova-plugin-qrscanner": "^2.6.0",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
@@ -55,7 +57,8 @@
             "cordova-plugin-ionic-webview": {
                 "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
             },
-            "cordova-plugin-ionic-keyboard": {}
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-qrscanner": {}
         },
         "platforms": [
             "android"
