--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,14 @@ log.txt
 *.sublime-workspace
 .vscode/
 npm-debug.log*
-package-lock.json
 
 .idea/
 .sourcemaps/
 .sass-cache/
 .tmp/
 .versions/
+.npmrc
+typings/
 coverage/
 dist/
 node_modules/
@@ -25,19 +26,13 @@ tmp/
 temp/
 hooks/
 platforms/
-/www/
+www/build/main.js
+plugins/
+plugins/android.json
+plugins/ios.json
+www/
 $RECYCLE.BIN/
-/plugins
 
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
-
-/buildConfig/build.json
-/buildConfig/gk.jks
-/buildConfig/secret.gradle
-/buildConfig/sunbird.properties
-/buildConfig/secret.tar
-/src/assets/data/
-
-google-services.json
