--- a/package.json
+++ b/package.json
@@ -24,19 +24,21 @@
         "@ionic-native/qr-scanner": "^4.20.0",
         "@ionic-native/splash-screen": "~4.18.0",
         "@ionic-native/status-bar": "~4.18.0",
+        "@ionic-native/unique-device-id": "^4.20.0",
         "@ionic/storage": "2.2.0",
         "@mobiscroll/angular": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.5.1.tgz",
-        "cordova-android": "7.1.4",
+        "cordova-android": "^7.1.4",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.1.3",
         "cordova-plugin-ionic-webview": "^2.3.2",
         "cordova-plugin-qrscanner": "^2.6.0",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-uniquedeviceid": "^1.3.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
-        "rxjs": "5.5.11",
+        "rxjs": "^5.5.11",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.26"
     },
@@ -58,7 +60,8 @@
                 "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
             },
             "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-qrscanner": {}
+            "cordova-plugin-qrscanner": {},
+            "cordova-plugin-uniquedeviceid": {}
         },
         "platforms": [
             "android"
