--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-uniquedeviceid": "^1.3.2",
         "cordova-plugin-whitelist": "^1.3.3",
+        "d3": ">= 3 < 4",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
         "rxjs": "^5.5.11",
@@ -44,6 +45,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.2.1",
+        "@types/d3": ">= 3 < 4",
         "typescript": "~2.6.2"
     },
     "description": "An Ionic project",
