--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
         "@ionic-native/status-bar": "~4.18.0",
         "@ionic-native/unique-device-id": "^4.20.0",
         "@ionic/storage": "2.2.0",
-        "@mobiscroll/angular": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.5.1.tgz",
-        "cordova-android": "^7.1.4",
+        "cordova-android": "7.1.4",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.1.3",
-        "cordova-plugin-ionic-webview": "^2.3.2",
+        "cordova-plugin-ionic-webview": "^2.3.3",
         "cordova-plugin-qrscanner": "^2.6.0",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
@@ -49,9 +48,6 @@
         "typescript": "~2.6.2"
     },
     "description": "An Ionic project",
-    "config": {
-        "ionic_copy": "./scripts/copy-mobiscroll-css.js"
-    },
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
