--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
         "build": "ionic-app-scripts build",
         "lint": "ionic-app-scripts lint"
     },
+    "config": {
+        "ionic_www_dir": "./www/sunbird"
+    },
     "dependencies": {
         "@angular/animations": "5.2.11",
         "@angular/common": "5.2.11",
@@ -28,11 +31,11 @@
         "@ionic/storage": "2.2.0",
         "cordova-android": "7.1.4",
         "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-genie-sdk": "git+https://github.com/AmiableAnil/cordova-plugin-genie-sdk.git",
+        "cordova-plugin-geniecanvas": "git+https://github.com/project-sunbird/cordova-plugin-geniecanvas.git",
         "cordova-plugin-ionic-keyboard": "^2.1.3",
         "cordova-plugin-ionic-webview": "^2.3.3",
         "cordova-plugin-qrscanner": "^2.6.0",
-        "cordova-plugin-splashscreen": "^5.0.2",
-        "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-uniquedeviceid": "^1.3.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "d3": ">= 3 < 4",
@@ -51,15 +54,15 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-statusbar": {},
             "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
             "cordova-plugin-ionic-webview": {
                 "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
             },
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-qrscanner": {},
-            "cordova-plugin-uniquedeviceid": {}
+            "cordova-plugin-uniquedeviceid": {},
+            "cordova-plugin-geniecanvas": {},
+            "cordova-plugin-genie-sdk": {}
         },
         "platforms": [
             "android"
